Mon Jul 01 23:42:33 GMT 2013  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Fix to actually removed cached databases before
	  "make check".

Mon Jul 01 22:21:41 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,api/queryinternal.cc,matcher/valuestreamdocument.h: Revert
	  changes accidentally included in r17373.

Sat Jun 29 12:39:10 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h,unicode/tclUniData.cc: Change
	  Xapian::Unicode::Internal::get_character_info() to simply return
	  Xapian::Unicode::UNASSIGNED for character outside unicode (ch >=
	  0x110000) which avoids a special check for such values before
	  we call get_character_info().

Sat Jun 29 09:31:12 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_serialise.cc: Remove code from registry* testcases which
	  tries to test the consequences of throwing an exception from a
	  destructor - it's complex to ensure we don't leak memory while doing
	  this (it seems GCC doesn't release the object in this case, but
	  clang does), and it's generally frowned upon, plus C++11 makes
	  destructors noexcept by default.

Thu Jun 27 02:36:02 GMT 2013  Olly Betts <olly@survex.com>

	* weight/weightinternal.h: Initialise total_term_count to zero.
	  Fixes failure of qp_flag_wildcard3 under valgrind in buildbot.

Wed Jun 26 05:48:21 GMT 2013  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: '# if defined' -> '#ifdef' to match
	  surrounding code better.

Wed Jun 26 05:47:38 GMT 2013  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: Fix 'unused label' warning when chert backend
	  is disabled.

Wed Jun 26 05:40:29 GMT 2013  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Fix previous change to compile.

Wed Jun 26 05:34:25 GMT 2013  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Change qp_scale1 to time 5 repetitions of
	  the large query to help average out variations.

Wed Jun 26 04:52:33 GMT 2013  Olly Betts <olly@survex.com>
