@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2001,2002 Ananova Ltd
- * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2013 Olly Betts
  * Copyright 2003 Orange PCS Ltd
  * Copyright 2003 Sam Liddicott
  * Copyright 2007,2008,2009 Lemur Consulting Ltd
@@ -61,6 +61,63 @@
 #include <vector>
 #include <map>
 #include <set>
+
+#ifdef HAVE_TIMER_CREATE
+#include <signal.h>
+#include <time.h>
+
+static void
+set_timeout_flag(union sigval sv)
+{
+    *(reinterpret_cast<volatile bool*>(sv.sival_ptr)) = true;
+}
+
+class TimeOut {
+    struct sigevent sev;
+    timer_t timerid;
+    volatile bool expired;
+
+  public:
+    TimeOut(double limit) : expired(false) {
+	if (limit > 0) {
+	    sev.sigev_notify = SIGEV_THREAD;
+	    sev.sigev_notify_function = set_timeout_flag;
+	    sev.sigev_notify_attributes = NULL;
+	    sev.sigev_value.sival_ptr =
+		static_cast<void*>(const_cast<bool*>(&expired));
+	    if (usual(timer_create(CLOCK_MONOTONIC, &sev, &timerid) == 0)) {
+		struct itimerspec interval;
+		interval.it_interval.tv_sec = 0;
+		interval.it_interval.tv_nsec = 0;
+		double seconds;
+		interval.it_value.tv_nsec = long(modf(limit, &seconds) * 1e9);
+		interval.it_value.tv_sec = time_t(seconds);
+		if (usual(timer_settime(timerid, 0, &interval, NULL) == 0)) {
+		    // Timeout successfully set.
+		    return;
+		}
+		timer_delete(timerid);
+	    }
+	}
+	sev.sigev_notify = SIGEV_NONE;
+    }
+
+    ~TimeOut() {
+	if (sev.sigev_notify != SIGEV_NONE) {
+	    timer_delete(timerid);
+	    sev.sigev_notify = SIGEV_NONE;
+	}
+    }
+
+    bool timed_out() const { return expired; }
+};
+#else
+class TimeOut {
+  public:
+    TimeOut(double) { }
+    bool timed_out() const { return false; }
+};
+#endif
 
 using namespace std;
 using Xapian::Internal::intrusive_ptr;
@@ -211,6 +268,7 @@ MultiMatch::MultiMatch(const Xapian::Database &db_,
 		       Xapian::valueno sort_key_,
 		       Xapian::Enquire::Internal::sort_setting sort_by_,
 		       bool sort_value_forward_,
+		       double time_limit_,
 		       Xapian::ErrorHandler * errorhandler_,
 		       Xapian::Weight::Internal & stats,
 		       const Xapian::Weight * weight_,
@@ -222,11 +280,12 @@ MultiMatch::MultiMatch(const Xapian::Database &db_,
 	  order(order_),
 	  sort_key(sort_key_), sort_by(sort_by_),
 	  sort_value_forward(sort_value_forward_),
+	  time_limit(time_limit_),
 	  errorhandler(errorhandler_), weight(weight_),
 	  is_remote(db.internal.size()),
 	  matchspies(matchspies_)
 {
-    LOGCALL_CTOR(MATCH, "MultiMatch", db_ | query_ | qlen | omrset | collapse_max_ | collapse_key_ | percent_cutoff_ | weight_cutoff_ | int(order_) | sort_key_ | int(sort_by_) | sort_value_forward_ | errorhandler_ | stats | weight_ | matchspies_ | have_sorter | have_mdecider);
+    LOGCALL_CTOR(MATCH, "MultiMatch", db_ | query_ | qlen | omrset | collapse_max_ | collapse_key_ | percent_cutoff_ | weight_cutoff_ | int(order_) | sort_key_ | int(sort_by_) | sort_value_forward_ | time_limit_| errorhandler_ | stats | weight_ | matchspies_ | have_sorter | have_mdecider);
 
     if (query.empty()) return;
 
@@ -249,8 +308,11 @@ MultiMatch::MultiMatch(const Xapian::Database &db_,
 		if (have_mdecider) {
 		    throw Xapian::UnimplementedError("Xapian::MatchDecider not supported for the remote backend");
 		}
+		// FIXME: Remote handling for time_limit with multiple
+		// databases may need some work.
 		rem_db->set_query(query, qlen, collapse_max, collapse_key,
 				  order, sort_key, sort_by, sort_value_forward,
+				  time_limit,
 				  percent_cutoff, weight_cutoff, weight,
 				  subrsets[i], matchspies);
 		bool decreasing_relevance =
@@ -317,6 +379,8 @@ MultiMatch::get_mset(Xapian::doccount first, Xapian::doccount maxitems,
     }
 
     Assert(!leaves.empty());
+
+    TimeOut timeout(time_limit);
 
 #ifdef XAPIAN_HAS_REMOTE_BACKEND
     // If there's only one database and it's remote, we can just unserialise
@@ -577,6 +641,10 @@ MultiMatch::get_mset(Xapian::doccount first, Xapian::doccount maxitems,
 	vsdoc.set_document(did);
 	LOGLINE(MATCH, "Candidate document id " << did << " wt " << wt);
 	Xapian::Internal::MSetItem new_item(wt, did);
+	if (check_at_least > maxitems && timeout.timed_out()) {
+	    check_at_least = maxitems;
+	}
+
 	if (sort_by != REL) {
 	    if (sorter) {
 		new_item.sort_key = (*sorter)(doc);
