@@ -2,7 +2,7 @@
  * @brief class for performing a match
  */
 /* Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003,2004,2005,2006,2007,2009,2011 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007,2009,2011,2013 Olly Betts
  * Copyright 2009 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or
@@ -57,6 +57,8 @@ class MultiMatch
 
 	bool sort_value_forward;
 
+	double time_limit;
+
 	/// ErrorHandler
 	Xapian::ErrorHandler * errorhandler;
 
@@ -93,6 +95,8 @@ class MultiMatch
 	 *  @param query     The query
 	 *  @param qlen      The query length
 	 *  @param omrset    The relevance set (or NULL for no RSet)
+	 *  @param time_limit_ Seconds to reduce check_at_least after (or <= 0
+	 *                     for no limit)
 	 *  @param errorhandler Errorhandler object
 	 *  @param stats     The stats object to add our stats to.
 	 *  @param wtscheme  Weighting scheme
@@ -112,6 +116,7 @@ class MultiMatch
 		   Xapian::valueno sort_key_,
 		   Xapian::Enquire::Internal::sort_setting sort_by_,
 		   bool sort_value_forward_,
+		   double time_limit_,
 		   Xapian::ErrorHandler * errorhandler,
 		   Xapian::Weight::Internal & stats,
 		   const Xapian::Weight *wtscheme,
